--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=library-backend
 
 # База даних MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/library_db?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/library_db?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 # spring.datasource.password= # Залиште пустим, якщо пароля немає
